--- a/styles/index.css
+++ b/styles/index.css
@@ -2003,6 +2003,10 @@ select {
   resize: none;
 }
 
+.resize {
+  resize: both;
+}
+
 .snap-x {
   scroll-snap-type: x var(--tw-scroll-snap-strictness);
 }
@@ -5118,4 +5122,33 @@ a[disabled] {
 }
 
 .midnight {
+}
+
+.rising-sun-container {
+  position: relative;
+}
+
+.hero-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  /* Adjust width as needed */
+  max-width: 600px;
+  /* Optional: for better control on larger screens */
+  margin: 0 auto;
+  padding: 20px;
+  box-sizing: border-box;
+  z-index: 1000;
+  /* Ensure it's above other elements */
+}
+
+.rising-sun-canvas {
+  display: block;
+  background-color: '#080909'
 }
