--- a/styles/main.css
+++ b/styles/main.css
@@ -301,3 +301,30 @@ a[disabled] {
 .midnight {
 
 }
+
+.rising-sun-container {
+  position: relative;
+}
+
+
+.hero-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%; /* Adjust width as needed */
+  max-width: 600px; /* Optional: for better control on larger screens */
+  margin: 0 auto;
+  padding: 20px;
+  box-sizing: border-box;
+  z-index: 1000; /* Ensure it's above other elements */
+}
+
+.rising-sun-canvas {
+  display: block;
+  background-color: '#080909'
+}
